--- a/src/Landing.css
+++ b/src/Landing.css
@@ -43,7 +43,7 @@ h1 {
   background-repeat: no-repeat;
   padding-bottom:0px;
   margin-bottom:0px;
-  height: 330px;
+  /*height: 330px;*/
   font-family: 'D.Signature';
   font-size: 50px;
   color: #493c06;
@@ -79,11 +79,11 @@ h1 {
     width: 350px;
   }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 600px) {
   .rsvpLink{
     font-family: "HelveticaNeue-Light"/*, "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif*/; 
     font-weight: 200;
-    font-size: 25px;
+    font-size: 20px;
   }
 }
 
