Removed texture from non-phone screen

--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,17 @@
 
 body{
 
-  background: url('./images/texture.jpg');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  background-color: #e4e4e4;
+
+/*  background: url('./images/texturePNG.png');
+  background-size: absolute;
+  background-position: left;
+  background-repeat: repeat;*/
 }
 
 @media only screen and (max-width: 600px) {
   body {
-    background: url('./images/texture.jpg');
+    background: url('./images/texturePNG.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
